--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.4.7",
     "lucide-react": "^0.468.0",
     "neverthrow": "^8.2.0",
     "next": "latest",
@@ -38,6 +39,7 @@
     "@types/react-dom": "19.0.2",
     "eslint": "9.23.0",
     "eslint-config-next": "15.2.4",
+    "jsdom": "^26.0.0",
     "postcss": "8.4.49",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.4.17",
