--- a/package.json
+++ b/package.json
@@ -9,40 +9,40 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
-    "@radix-ui/react-checkbox": "^1.1.1",
+    "@radix-ui/react-checkbox": "^1.1.5",
     "@radix-ui/react-dialog": "^1.1.7",
-    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.7",
     "@radix-ui/react-icons": "^1.3.2",
-    "@radix-ui/react-label": "^2.1.2",
-    "@radix-ui/react-slot": "^1.1.2",
-    "@radix-ui/react-toast": "^1.2.6",
+    "@radix-ui/react-label": "^2.1.3",
+    "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-toast": "^1.2.7",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
     "autoprefixer": "10.4.20",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.5.0",
     "lucide-react": "^0.468.0",
     "neverthrow": "^8.2.0",
-    "next": "latest",
-    "next-themes": "^0.4.3",
-    "prettier": "^3.3.3",
+    "next": "^15.3.0",
+    "next-themes": "^0.4.6",
+    "prettier": "^3.5.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-hook-form": "^7.55.0",
-    "supabase": "^2.20.5",
-    "zod": "^3.24.2"
+    "supabase": "^2.20.12",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@types/node": "22.10.2",
-    "@types/react": "^19.0.2",
+    "@types/react": "^19.1.2",
     "@types/react-dom": "19.0.2",
     "eslint": "9.23.0",
     "eslint-config-next": "15.2.4",
-    "jsdom": "^26.0.0",
+    "jsdom": "^26.1.0",
     "postcss": "8.4.49",
-    "tailwind-merge": "^2.5.2",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss": "3.4.17",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.7.2",
