--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-hook-form": "^7.56.0",
+    "react-icons": "^5.5.0",
     "supabase": "^2.20.12",
     "zod": "^3.24.3"
   },
