--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "lucide-react": "^0.468.0",
     "neverthrow": "^8.2.0",
     "next": "^15.3.1",
+    "next-plausible": "^3.12.4",
     "next-themes": "^0.4.6",
     "prettier": "^3.5.3",
     "react": "19.0.0",
