--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 # Update these with your Supabase details from your project settings > API
 NEXT_PUBLIC_SUPABASE_URL=your-project-url
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
+SUPABASE_SERVICE_KEY=your-service-key
