--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "next": "^15.3.1",
     "next-plausible": "^3.12.4",
     "next-themes": "^0.4.6",
+    "plaiceholder": "^3.0.0",
     "prettier": "^3.5.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
