--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "plaiceholder": "^3.0.0",
     "prettier": "^3.5.3",
     "react": "19.0.0",
+    "react-day-picker": "^9.7.0",
     "react-dom": "19.0.0",
     "react-hook-form": "^7.57.0",
     "react-icons": "^5.5.0",
