--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@
 NEXT_PUBLIC_SUPABASE_URL=your-project-url
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
 SUPABASE_SERVICE_KEY=your-service-key
+
+SITE_URL=http://localhost:3000
