--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.14",
+    "@radix-ui/react-scroll-area": "^1.2.9",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-toast": "^1.2.14",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@react-three/drei": "^10.2.0",
     "@react-three/fiber": "^9.1.2",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
+    "@types/katex": "^0.16.7",
     "@types/three": "^0.177.0",
     "autoprefixer": "10.4.20",
     "class-variance-authority": "^0.7.1",
@@ -30,6 +33,7 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
+    "katex": "^0.16.22",
     "lucide-react": "^0.468.0",
     "neverthrow": "^8.2.0",
     "next": "^15.3.3",
