--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-hook-form": "^7.57.0",
     "react-icons": "^5.5.0",
     "three": "^0.177.0",
+    "tw-animate-css": "^1.3.5",
     "zod": "^3.25.56"
   },
   "devDependencies": {
