--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "jsdom": "^26.1.0",
     "postcss": "8.4.49",
     "prettier": "^3.6.2",
+    "supabase": "^2.31.4",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^4.1.11",
     "tailwindcss-animate": "^1.0.7",
