--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -95,11 +95,11 @@ file_size_limit = "50MiB"
 # enabled = true
 
 # Uncomment to configure local storage buckets
-# [storage.buckets.images]
-# public = false
-# file_size_limit = "50MiB"
-# allowed_mime_types = ["image/png", "image/jpeg"]
-# objects_path = "./images"
+[storage.buckets.profile-images]
+public = true
+file_size_limit = "30MB"
+allowed_mime_types = ["image/*"]
+objects_path = "./images"
 
 [auth]
 enabled = true
