--- a/package.json
+++ b/package.json
@@ -35,12 +35,14 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "dotenv": "^16.6.1",
+    "gsap": "^3.13.0",
     "katex": "^0.16.22",
     "lucide-react": "^0.468.0",
     "neverthrow": "^8.2.0",
     "next": "^15.4.1",
     "next-plausible": "^3.12.4",
     "next-themes": "^0.4.6",
+    "ogl": "^1.0.11",
     "plaiceholder": "^3.0.0",
     "react": "19.0.0",
     "react-day-picker": "^9.8.0",
