--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@react-three/drei": "^10.5.1",
     "@react-three/fiber": "^9.2.0",
+    "@react-three/postprocessing": "^3.0.4",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
     "@t3-oss/env-core": "^0.13.8",
@@ -44,12 +45,13 @@
     "next-themes": "^0.4.6",
     "ogl": "^1.0.11",
     "plaiceholder": "^3.0.0",
+    "postprocessing": "^6.37.6",
     "react": "19.0.0",
     "react-day-picker": "^9.8.0",
     "react-dom": "19.0.0",
     "react-hook-form": "^7.60.0",
     "react-icons": "^5.5.0",
-    "three": "^0.177.0",
+    "three": "^0.178.0",
     "tw-animate-css": "^1.3.5",
     "zod": "^3.25.76"
   },
