--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,12 @@
     "module": "ESNext",
     "moduleResolution": "Bundler",
     "jsx": "preserve",
-    "plugins": [{ "name": "next" }],
+    "plugins": [
+      { "name": "next" },
+      {
+        "name": "@effect/language-service"
+      }
+    ],
     "incremental": true,
 
     /* Path Aliases */
