--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-scroll-area": "^1.2.9",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-toast": "^1.2.14",
     "@radix-ui/react-tooltip": "^1.2.7",
@@ -48,12 +49,14 @@
     "next-themes": "^0.4.6",
     "ogl": "^1.0.11",
     "plaiceholder": "^3.0.0",
+    "postgres": "^3.4.7",
     "postprocessing": "^6.37.6",
     "react": "19.0.0",
     "react-day-picker": "^9.8.0",
     "react-dom": "19.0.0",
     "react-hook-form": "^7.60.0",
     "react-icons": "^5.5.0",
+    "react-number-format": "^5.4.4",
     "three": "^0.178.0",
     "tw-animate-css": "^1.3.5",
     "zod": "^4.0.5"
