--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "dev": "next dev --turbopack",
     "build": "BUILDING=true next build --turbopack",
     "start": "next start",
-    "lint": "next lint",
-    "lint:fix": "next lint --fix",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix .",
     "type-check": "tsc --noEmit",
     "test": "vitest"
   },
@@ -45,15 +45,15 @@
     "katex": "^0.16.22",
     "lucide-react": "^0.468.0",
     "neverthrow": "^8.2.0",
-    "next": "^15.4.1",
+    "next": "15.5.0",
     "next-plausible": "^3.12.4",
     "next-themes": "^0.4.6",
     "ogl": "^1.0.11",
     "plaiceholder": "^3.0.0",
     "postprocessing": "^6.37.6",
-    "react": "19.0.0",
+    "react": "19.1.1",
     "react-day-picker": "^9.8.0",
-    "react-dom": "19.0.0",
+    "react-dom": "19.1.1",
     "react-hook-form": "^7.60.0",
     "react-icons": "^5.5.0",
     "react-number-format": "^5.4.4",
@@ -65,12 +65,12 @@
     "@eslint/eslintrc": "^3.3.1",
     "@tailwindcss/postcss": "^4.1.11",
     "@types/node": "22.10.2",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "19.0.2",
+    "@types/react": "19.1.10",
+    "@types/react-dom": "19.1.7",
     "@typescript-eslint/eslint-plugin": "^8.37.0",
     "@typescript-eslint/parser": "^8.37.0",
     "eslint": "9.23.0",
-    "eslint-config-next": "15.2.4",
+    "eslint-config-next": "15.5.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
@@ -85,5 +85,9 @@
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.7.2",
     "vitest": "^3.2.4"
+  },
+  "overrides": {
+    "@types/react": "19.1.10",
+    "@types/react-dom": "19.1.7"
   }
 }
