--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,6 @@ SUPABASE_ANON_KEY=your-anon-key
 SUPABASE_SERVICE_KEY=your-service-key
 
 NEXT_PUBLIC_SITE_URL=http://localhost:3000
+
+DISCORD_LINK=
+WHATSAPP_LINK=
