--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@t3-oss/env-core": "^0.13.8",
     "@types/katex": "^0.16.7",
     "@types/three": "^0.179.0",
+    "babel-plugin-react-compiler": "^19.1.0-rc.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
