--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "katex": "^0.16.22",
     "lucide-react": "^0.541.0",
     "neverthrow": "^8.2.0",
-    "next": "15.5.1-canary.4",
+    "next": "15.5.0",
     "next-plausible": "^3.12.4",
     "next-themes": "^0.4.6",
     "ogl": "^1.0.11",
@@ -70,7 +70,7 @@
     "@typescript-eslint/eslint-plugin": "^8.40.0",
     "@typescript-eslint/parser": "^8.40.0",
     "eslint": "9.33.0",
-    "eslint-config-next": "15.5.1-canary.4",
+    "eslint-config-next": "15.5.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
